# ChangeLog for gnome-base/gnome
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome/ChangeLog,v 1.146 2005/03/09 04:15:48 obz Exp $

  09 Mar 2005; Mike Gardiner <obz@gentoo.org> gnome-2.8.2.ebuild:
  Keyworded x86 ppc

*gnome-2.8.3-r1 (07 Mar 2005)

  07 Mar 2005; Leonardo Boshell <leonardop@gentoo.org> gnome-2.8.3-r1.ebuild:
  Added gnome-speech and dasher to the accessibility section.

*gnome-2.8.3 (02 Mar 2005)

  02 Mar 2005; Mike Gardiner <obz@gentoo.org> +gnome-2.8.3.ebuild,
  gnome-2.8.3_pre0.ebuild:
  New version, 2.8.3. This release consists almost entirely of bugfixes, and
  new translations

*gnome-2.8.2 (20 Jan 2005)

  20 Jan 2005; Mike Gardiner <obz@gentoo.org> +gnome-2.8.2.ebuild:
  New meta version - 2.8.2 in ~arch

  08 Jan 2005; Tom Martin <slarti@gentoo.org> gnome-2.8.1-r1.ebuild:
  Stable on amd64.

  27 Dec 2004; Guy Martin <gmsoft@gentoo.org> gnome-2.8.1-r1.ebuild:
  Stable on hppa.

  27 Dec 2004; Joe McCann <joem@gentoo.org> gnome-2.6.1_p1.ebuild,
  gnome-2.6.3_pre0.ebuild:
  Remove deps on masked esound and add !mips for epiphany. Fixes bug 75794

  24 Dec 2004; Bryan ÃÂstergaard <kloeri@gentoo.org> gnome-2.8.1-r1.ebuild:
  Stable on alpha.

  22 Dec 2004; Gustavo Zacarias <gustavoz@gentoo.org> gnome-2.8.1-r1.ebuild:
  Stable on sparc

  19 Dec 2004; Mike Gardiner <obz@gentoo.org> gnome-2.8.1-r1.ebuild:
  Keyworded x86 and ppc - everyone say hello GNOME 2.8.1

  11 Dec 2004; Bryan ÃÂstergaard <kloeri@gentoo.org> gnome-2.8.0-r1.ebuild:
  Stable on alpha.

  11 Dec 2004; Mike Gardiner <obz@gentoo.org> gnome-2.8.1-r1.ebuild,
  -gnome-2.8.1.ebuild:
  Moved back to libglade-2.4, as 2.4.1 is buggy/incompatible, see bug #73868

*gnome-2.8.1-r1 (08 Dec 2004)

  08 Dec 2004; Mike Gardiner <obz@gentoo.org> +gnome-2.8.1-r1.ebuild,
  gnome-2.8.1.ebuild:
  New version in ~arch, see bug #72798 for the movement from package.mask
