@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome/Attic/gnome-2.8.2.ebuild,v 1.4 2005/03/09 04:15:48 obz Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome/Attic/gnome-2.8.2.ebuild,v 1.5 2005/03/10 02:30:38 gustavoz Exp $
 
 DESCRIPTION="Meta package for the GNOME desktop"
 HOMEPAGE="http://www.gnome.org/"
@@ -9,7 +9,7 @@ LICENSE="as-is"
 SLOT="2.0"
 # when unmasking for an arch
 # double check none of the deps are still masked !
-KEYWORDS="x86 ppc ~sparc ~amd64 ~mips ~hppa ~ia64 ~alpha"
+KEYWORDS="x86 ppc sparc ~amd64 ~mips ~hppa ~ia64 ~alpha"
 IUSE="accessibility cdr dvdr hal"
 
 S=${WORKDIR}
