@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-games/Attic/gnome-games-2.8.2.ebuild,v 1.3 2005/03/09 03:17:45 obz Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-games/Attic/gnome-games-2.8.2.ebuild,v 1.4 2005/03/10 02:26:50 gustavoz Exp $
 
 inherit gnome2 eutils flag-o-matic
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.gnome.org/"
 
 LICENSE="GPL-2 FDL-1.1"
 SLOT="0"
-KEYWORDS="x86 ppc ~sparc ~mips ~alpha ~hppa ~amd64 ~ia64"
+KEYWORDS="x86 ppc sparc ~mips ~alpha ~hppa ~amd64 ~ia64"
 IUSE="guile artworkextra"
 
 RDEPEND=">=x11-libs/gtk+-2.3
