@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/gnome
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome/ChangeLog,v 1.146 2005/03/09 04:15:48 obz Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome/ChangeLog,v 1.147 2005/03/10 02:30:38 gustavoz Exp $
+
+  09 Mar 2005; Gustavo Zacarias <gustavoz@gentoo.org> gnome-2.8.2.ebuild:
+  Stable on sparc
 
   09 Mar 2005; Mike Gardiner <obz@gentoo.org> gnome-2.8.2.ebuild:
   Keyworded x86 ppc
